# ihale-mcp

./: .gitignore  README.md  ihale_client.py  ihale_mcp.py  ihale_models.py  ilan_client.py  main.py  pyproject.toml  requirements.txt
tenders/: README.md  authority_preferences.json  company_profile.md  negative_signals.txt  okas_signal_map.json  positive_signals.txt  reason_codes.md  report_template_daily.md  report_template_weekly.md  scoring_policy.md  search_config.json
tenders/dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.js
tenders/dashboard/scripts/: capture-screenshots.mjs
tenders/dashboard/server/: index.js
tenders/dashboard/src/: App.jsx  api.js  index.css  locale.js
tenders/dashboard/src/components/: Overview.jsx  ReportsView.jsx  RunHealth.jsx  SuppressedView.jsx  TenderDetail.jsx  TenderTable.jsx
tenders/data/: bid_tracking.json  run_state.json  score_history.jsonl  seen_tenders.json  tender_decisions.json  tender_history.json
tenders/data/.backup/: run_state.json.bak
tenders/prompts/: ai_enrichment_prompt.md  daily_scan_prompt.md  delta_scan_prompt.md  weekly_summary_prompt.md
tenders/reports/daily/: 2026-03-08-smoke-test.md  2026-03-09.md
tenders/reports/weekly/: 2026-[W]11.md
tenders/tmp-smoke/: buro_mobilya.json  hastane_mobilya.json  konferans_mobilya.json  masa_sandalye_koltuk.json  mefrusat.json  mobilya.json  ofis_mobilya.json  okul_mobilya.json  otel_mobilya.json  tefrisat.json
