[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ihale-mcp"
version = "0.1.0"
description = "MCP Server for Turkish Government Tenders (İhale) and Announcements"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.10.6",
    "httpx>=0.28.1",
    "markitdown>=0.1.2",
    "pydantic>=2.11.7",
    "typing-extensions>=4.14.1",
    "fastapi>=0.116.1",
]

[project.scripts]
ihale-mcp = "ihale_mcp:main"

[tool.setuptools]
py-modules = ["ihale_mcp", "ihale_client", "ihale_models", "ilan_client", "main"]

[dependency-groups]
dev = [
    "build>=1.3.0",
]
