[project]
name = "ihale-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.6",
    "httpx>=0.28.1",
    "markitdown>=0.1.2",
    "pydantic>=2.11.7",
    "typing-extensions>=4.14.1",
    "fastapi>=0.116.1",
]
